--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,11 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>org.kefirsf</groupId>
+            <artifactId>kefirbb</artifactId>
+            <version>1.5</version>
+        </dependency>    </dependencies>
 
     <build>
         <plugins>
