Cleanup & Testing for Round 2.

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -3,7 +3,7 @@
 rootLogger.appenderRefs = stdout, file
 rootLogger.appenderRef.stdout.ref = stdout
 rootLogger.appenderRef.file.ref = file
-rootLogger.level = debug
+rootLogger.level = info
 # Redirect log messages to console
 appender.stdout.type = Console
 appender.stdout.target = SYSTEM_OUT
@@ -14,7 +14,7 @@ appender.stdout.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 appender.file.type = RollingFile
 appender.file.name = file
 #appender.file.fileName = ${sys:logFilename}
-appender.file.fileName = m-100.log
+appender.file.fileName = m-100-snitz-database-cleanup.log
 appender.file.filePattern = ${filename}
 appender.file.policies.type = Policies
 appender.file.policies.size.type = SizeBasedTriggeringPolicy
